--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "fea58e7fdbfdb6db",
    "metadata": {},
    "outputs": [
@@ -15,28 +15,28 @@
       "Requirement already satisfied: praw in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (7.8.1)\n",
       "Requirement already satisfied: tqdm in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (4.67.1)\n",
       "Requirement already satisfied: torch in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.7.1)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (2024.11.6)\n",
-      "Requirement already satisfied: tokenizers<0.22,>=0.21 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (0.21.2)\n",
-      "Requirement already satisfied: filelock in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (3.18.0)\n",
       "Requirement already satisfied: safetensors>=0.4.3 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (0.5.3)\n",
-      "Requirement already satisfied: requests in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (2.32.4)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (6.0.2)\n",
+      "Requirement already satisfied: tokenizers<0.22,>=0.21 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (0.21.2)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (2024.11.6)\n",
       "Requirement already satisfied: huggingface-hub<1.0,>=0.30.0 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (0.33.1)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (25.0)\n",
       "Requirement already satisfied: numpy>=1.17 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (1.24.3)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (6.0.2)\n",
+      "Requirement already satisfied: filelock in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (3.18.0)\n",
+      "Requirement already satisfied: requests in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (2.32.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from transformers) (25.0)\n",
       "Requirement already satisfied: update_checker>=0.18 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from praw) (0.18.0)\n",
       "Requirement already satisfied: websocket-client>=0.54.0 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from praw) (1.8.0)\n",
       "Requirement already satisfied: prawcore<3,>=2.4 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from praw) (2.4.0)\n",
       "Requirement already satisfied: colorama in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from tqdm) (0.4.6)\n",
-      "Requirement already satisfied: fsspec in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from torch) (2025.5.1)\n",
       "Requirement already satisfied: typing-extensions>=4.10.0 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from torch) (4.14.0)\n",
-      "Requirement already satisfied: sympy>=1.13.3 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from torch) (1.14.0)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from torch) (3.1.6)\n",
+      "Requirement already satisfied: fsspec in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from torch) (2025.5.1)\n",
       "Requirement already satisfied: networkx in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from torch) (3.2.1)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->transformers) (2.5.0)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from torch) (3.1.6)\n",
+      "Requirement already satisfied: sympy>=1.13.3 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from torch) (1.14.0)\n",
       "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->transformers) (3.10)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->transformers) (3.4.2)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->transformers) (2025.6.15)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->transformers) (3.4.2)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->transformers) (2.5.0)\n",
       "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\cheta\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from jinja2->torch) (3.0.2)\n"
      ]
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "ed1db429a5205f91",
    "metadata": {},
    "outputs": [
@@ -66,13 +66,8 @@
      "text": [
       "Flask app is running. Access it at http://127.0.0.1:5000/persona/\n",
       " * Serving Flask app '__main__'\n",
-      " * Serving Flask app '__main__'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: on\n",
       " * Debug mode: on\n"
      ]
     },
@@ -121,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "e94b4509",
    "metadata": {},
    "outputs": [
@@ -311,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "25dcd1ea8c297c70",
    "metadata": {},
    "outputs": [
@@ -320,7 +315,6 @@
      "output_type": "stream",
      "text": [
       "Extracted username: Hungry-Move-6603\n",
-      "[1] Fetching data for Reddit user: Hungry-Move-6603\n",
       "[1] Fetching data for Reddit user: Hungry-Move-6603\n"
      ]
     },
@@ -328,7 +322,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cheta\\AppData\\Local\\Temp\\ipykernel_5388\\4268133347.py:36: DeprecationWarning: 'Redditor.subreddit' is no longer a dict and is now an UserSubreddit object. Using 'get' is deprecated and will be removed in PRAW 8.\n",
+      "C:\\Users\\cheta\\AppData\\Local\\Temp\\ipykernel_15056\\4268133347.py:36: DeprecationWarning: 'Redditor.subreddit' is no longer a dict and is now an UserSubreddit object. Using 'get' is deprecated and will be removed in PRAW 8.\n",
       "  \"bio\": getattr(user, 'subreddit', {}).get('public_description', '') if hasattr(user, 'subreddit') and user.subreddit else \"\"\n"
      ]
     },
@@ -343,8 +337,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3it [00:00,  7.51it/s]\n",
-      "3it [00:00,  7.51it/s]\n"
+      "3it [00:00,  7.15it/s]\n",
+      "3it [00:00,  7.15it/s]\n"
      ]
     },
     {
@@ -358,7 +352,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "12it [00:00, 21.75it/s]\n",
+      "12it [00:00, 24.72it/s]\n",
       "\n"
      ]
     },
@@ -377,10 +371,10 @@
      "text": [
       "Device set to use cpu\n",
       "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n",
-      "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n",
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
       "Both `max_new_tokens` (=256) and `max_length`(=1024) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
+      "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
       "Both `max_new_tokens` (=256) and `max_length`(=1024) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
       "Both `max_new_tokens` (=256) and `max_length`(=1024) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
@@ -518,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "4c41a73c",
    "metadata": {},
    "outputs": [],
@@ -559,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "c63b4b11",
    "metadata": {},
    "outputs": [
@@ -567,13 +561,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Using username: Hungry-Move-6603\n",
       "Persona HTML generated at output/Hungry-Move-6603.html\n"
      ]
     }
    ],
    "source": [
+    "# Get the actual username from the previously run cells\n",
+    "if 'actual_username' in globals():\n",
+    "    username = actual_username\n",
+    "elif 'username' in globals() and username and username not in ['<predicted name>', 'unknown']:\n",
+    "    username = username\n",
+    "else:\n",
+    "    # If username is not properly set, get it from profile_info or use a default\n",
+    "    username = profile_info.get(\"name\", \"unknown_user\") if 'profile_info' in globals() else \"unknown_user\"\n",
+    "\n",
+    "print(f\"Using username: {username}\")\n",
+    "\n",
     "persona_data = {\n",
-    "    \"name\": profile_info.get(\"name\", username),\n",
+    "    \"name\": profile_info.get(\"name\", username) if 'profile_info' in globals() else username,\n",
     "    \"age\": \"28\",\n",
     "    \"occupation\": \"Software Engineer\",\n",
     "    \"status\": \"Active\",\n",
@@ -587,15 +593,21 @@
     "    \"goals\": [\"Expand knowledge\", \"Connect with others\"],\n",
     "    \"frustrations\": [\"Lack of feedback\", \"Unclear rules\"],\n",
     "    \"quote\": \"I want to spend less time ordering a healthy takeaway and more time enjoying my meal.\",\n",
-    "    \"user_img\": profile_info.get(\"icon_img\", \"\")\n",
+    "    \"user_img\": profile_info.get(\"icon_img\", \"\") if 'profile_info' in globals() else \"\"\n",
     "}\n",
+    "\n",
+    "# Ensure the output directory exists\n",
+    "import os\n",
+    "os.makedirs('output', exist_ok=True)\n",
+    "\n",
+    "# Update HTML template\n",
     "update_html_template(\"templates/sample1.html\", f\"output/{username}.html\", persona_data)\n",
     "print(f\"Persona HTML generated at output/{username}.html\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "b06535ad",
    "metadata": {},
    "outputs": [
@@ -657,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "4ecb6472",
    "metadata": {},
    "outputs": [
@@ -683,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "b255cd9c",
    "metadata": {},
    "outputs": [
@@ -694,9 +706,9 @@
       "Device set to use cpu\n",
       "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Both `max_new_tokens` (=256) and `max_length`(=512) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
       "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
-      "Both `max_new_tokens` (=256) and `max_length`(=512) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
       "Both `max_new_tokens` (=256) and `max_length`(=512) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n"
      ]
     },
@@ -801,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "cd4abed5",
    "metadata": {},
    "outputs": [
@@ -875,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "id": "194dc7a6",
    "metadata": {},
    "outputs": [
